# Sign_Language_aivle

./: db.sqlite3  pyproject.toml  test.ipynb
chatgpt/: views.py
chatgpt/static/gtp/: style.css
chatgpt/templates/gpt/: index.html  result.html
mysite/: settings.py  urls.py
signlanguagetochatgpt/: models.py  views.py
signlanguagetochatgpt/templates/languagechat/: index.html  result.html
static/: chatgpt.css  chatgptresult.css  index.css  signtochatgpt.css  signtochatgptresult.css  styles.css
templates/: index.html  test.html
