[tool.poetry]
name = "sign-language-aivle"
version = "0.1.0"
description = ""
authors = ["None"]
readme = "README.md"
packages = [{include = "sign_language_aivle"}]

[tool.poetry.dependencies]
python = "3.10.11"
django = "^4.2.1"
mlflow = "^2.3.2"
opencv-python = "^4.7.0.72"
pillow = "^9.5.0"
tensorflow-macos = "^2.12.0"
openai = "^0.27.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
